# electric-eye

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml
electric_eye/: ac.py  blinds.py  cli.py  config.py  web.py
electric_eye/static/: index.html
