[project]
name = "electric-eye"
version = "0.1.0"
description = "CLI to control Mobilus blinds and Dahua cameras"
requires-python = ">=3.11"
dependencies = [
    "mobilus-client",
    "click",
    "python-dotenv",
    "websockets",
    "fastapi",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["electric_eye"]

[tool.hatch.build.targets.wheel.force-include]
"electric_eye/static" = "electric_eye/static"

[project.scripts]
ee = "electric_eye.cli:cli"
